<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.binance.raft-exchange</groupId>
	<artifactId>raft-exchange</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>exchange-core</module>
		<module>raft-exchange-server</module>
		<module>raft-exchange-client</module>
		<module>raft-exchange-spi</module>
	</modules>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<exchange-core.version>1.0.0-SNAPSHOT</exchange-core.version>
		<exchange-spi.version>1.0.0-SNAPSHOT</exchange-spi.version>
		<binance-infra.version>2.0.0-SNAPSHOT</binance-infra.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.binance.raft-exchange</groupId>
				<artifactId>exchange-core</artifactId>
				<version>${exchange-core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.binance.raft-exchange</groupId>
				<artifactId>raft-exchange-spi</artifactId>
				<version>${exchange-spi.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>bijie-snapshots</id>
			<name>Bijie Project SNAPSHOTS</name>
			<url>${deploy.snapshot.url}</url>
		</snapshotRepository>
		<repository>
			<id>bijie-releases</id>
			<name>Bijie Project Release</name>
			<url>${deploy.release.url}</url>
		</repository>
	</distributionManagement>
</project>